<resources>
    <string name="app_name">E-Commerce_App</string>
    <string name="enter_your_email_to_continue">Enter your email to continue</string>
    <string name="continuee">Continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="by_tapping_continue_with_google_or_facebook_you_agree_to_app_s_terms_of_use_and_privacy_policy">By tapping Continue with Google or Facebook you agree to app\'s terms of use and privacy policy :)</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="like">favorite</string>
    <string name="cart">cart</string>
    <string name="profile">profile</string>
    <string name="egp">$ </string>
    <string name="best_selling">Best Selling</string>
    <string name="comfort_wear">Comfort Wear</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="favourites">favourites</string>
    <string name="no_items_in_the_cart">No items in the cart</string>
    <string name="total_price">Total :</string>
    <string name="or">OR</string>
    <string name="enter_your_password_to_continue">Enter your password to continue</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="purchase">Purchase</string>
    <string name="product_not_found">Product not found</string>
    <string name="no_favourite_items">No favourite items</string>
    <string name="register">Register</string>
    <string name="enter_email">enter email</string>
    <string name="enter_user_name">enter user name</string>
    <string name="register_now">register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
</resources>